# agent--relay

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  execution-plan.md  implementation-plan.md  milestone-1-reliable-session-core.md  roadmap-status.md  v1-design.md
docs/agent/: execution-plan.md
docs/agent/milestones/: milestone-1-reliable-session-core.md
docs/assets/icons/: README.md
docs/developer/: master-control.md  release-checklist.md  roadmap-status.md
docs/examples/: demo-walkthrough.md
src/agent_relay/: __init__.py  agents.py  alerts.py  bootstrap.py  capture.py  capture_support.py  charts.py  checkpoints.py  cli.py  concurrent.py  converse.py  dashboard.py  dashboard_alerts.py  dashboard_query.py  dashboard_session.py  errors.py  formatting.py  fs.py  handoffs.py  hashing.py  integrity.py  launcher.py  layout.py  lifecycle.py  locks.py  metrics.py  metrics_ui.py  models.py  provider_capture.py  read_views.py  relay.py  repair.py  replay.py  resumable_state.py  resume.py  resume_options.py  run_session.py  sse.py  storage.py  summary.py  (+7 more)
src/agent_relay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/agent_relay/exporters/: __init__.py  jsonl.py  otlp.py  prometheus.py
src/agent_relay/v2/: __init__.py  bootstrap.py  capture_support.py  checkpoints.py  errors.py  handoffs.py  hashing.py  integrity.py  layout.py  lifecycle.py  locks.py  migrate.py  models.py  repair.py  replay.py  storage.py  tx.py
tests/: __init__.py  _dashboard_test_helpers.py  session_fixtures.py  test_agents.py  test_alerts.py  test_aliases.py  test_capture.py  test_charts.py  test_checkpoint_cli.py  test_checkpointing.py  test_checkpoints.py  test_cli.py  test_cli_alerts.py  test_cli_metrics.py  test_cli_watch.py  test_concurrent.py  test_converse.py  test_dashboard.py  test_dashboard_alerts.py  test_dashboard_filtering.py  test_dashboard_hardening.py  test_dashboard_session.py  test_dashboard_sse.py  test_design_system_guardrails.py  test_discovery.py  test_exporter_jsonl.py  test_exporter_otlp.py  test_exporter_prometheus.py  test_handoff_cli.py  test_handoffs.py  test_integration_flow.py  test_launcher.py  test_lifecycle.py  test_locks.py  test_metrics.py  test_models.py  test_race_integration.py  test_relay_command.py  test_repair.py  test_replay.py  (+21 more)
