[project]
name = "agent-relay"
version = "0.1.0"
description = "Local-first agent handoff CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Beth Vour" }
]

[project.scripts]
agent-relay = "agent_relay.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
